--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ ai_enabled ]
+    branches: [ main ]
   workflow_dispatch:
 
 permissions:
